templates/app-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-app-gateway
spec:
  selector:
    istio: ingressgateway  # use Istio's built-in ingress gateway
  servers:
  - port:
      number: 443          # Port that the Gateway will listen on
      name: https
      protocol: HTTPS
    hosts:
    - "demo.devopswithme.in"
     # The hostname your app will respond to
