templates/grafana-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: http-grafana
      protocol: HTTPS
    hosts:
    - "grafana.devopswithme.in"
