templates/kiali-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: http-kiali
      protocol: HTTPS
    hosts:
    - "kiali.devopswithme.in"
