templates/prometheus-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: http-prom
      protocol: HTTPS
    hosts:
    - "prometheus.devopswithme.in"
