templates/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: argocd
spec:
  gateways:
  - argocd-gateway
  hosts:
  - argocd.devopswithme.in
  http:
    - route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 443
